Fix path to build_mksu.sh in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Build
         working-directory: kernel_workspace
         run: |
-          ./build_mksu.sh
+          ../build_mksu.sh
 
       - name: Upload artifacts
         uses: actions/upload-artifact@main
