--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         manifest_file:
-          - oneplus12_u
+          # - oneplus12_u
           - oneplus12_v
           - oneplus_13r
           - oneplus_ace3_pro
@@ -64,7 +64,8 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@main
         with:
-          name: "AnyKernel3-${{ steps.build.outputs.kernel_version }}\
+          name:
+            "AnyKernel3-${{ matrix.manifest_file }}-${{ steps.build.outputs.kernel_version }}\
             -MKSU-${{ steps.build.outputs.ksu_version }}\
-            -SUSFS-${{ matrix.manifest_file }}"
+            -SUSFS-${{ steps.build.outputs.susfs_version }}"
           path: kernel_workspace/AnyKernel3
