Add oneplus_pad_pro_v to the build matrix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           - oneplus_ace3_pro_v
           - oneplus_ace5
           - oneplus_pad2_v
+          - oneplus_pad_pro_v
         build_type:
           - mksu
           - ksu-susfs
