Update manifest file names in build workflow
ref: https://github.com/OnePlusOSS/kernel_manifest/commit/57eede67fba396f813d0339c8bb015e6c25e8153

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         manifest_file:
-          # - oneplus12_u
-          - oneplus12_v
+          # - oneplus_12_u
+          - oneplus_12_v
           - oneplus_13r
           - oneplus_ace3_pro
           - oneplus_ace3_pro_v
