add b version support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,18 @@ jobs:
         manifest_file:
           # - oneplus_12_u
           - oneplus_12_v
+          - oneplus_12_b
           - oneplus_13r
+          - oneplus_13r_b
           - oneplus_ace3_pro
           - oneplus_ace3_pro_v
+          - oneplus_ace3_pro_b
           - oneplus_ace5
+          - oneplus_ace5_b
           - oneplus_pad2_v
+          - oneplus_pad2_b
           - oneplus_pad_pro_v
+          - oneplus_pad_pro_b
         build_type:
           - mksu
           - ksu-susfs
